--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-20.04, windows-latest, macos-12]
+        platform: [macos-latest, ubuntu-24.04, windows-latest, macos-12]
 
     runs-on: ${{ matrix.platform }}
 
@@ -87,10 +87,10 @@ jobs:
           git pull
 
       - name: Install dependencies (Linux)
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-24.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libssl-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Rust (Stable)
         run:
@@ -123,7 +123,7 @@ jobs:
         run: yarn install && cd $env:GITHUB_WORKSPACE/frontend/ && yarn install && cd $env:GITHUB_WORKSPACE # Change this to npm, yarn or pnpm.
 
       - name: Build the app (Linux)
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-24.04'
         uses: tauri-apps/tauri-action@v0
 
         env:
@@ -210,7 +210,7 @@ jobs:
           releaseBody: "Fixes"
 
       - name: Upload linux binary
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-24.04'
         uses: svenstaro/upload-release-action@v2
         with:
           tag: v${{ needs.update_version.outputs.version }}
@@ -218,7 +218,7 @@ jobs:
           file: src-tauri/target/release/music-assistant-companion
 
       - name: Upload squeezelite binary
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-24.04'
         uses: svenstaro/upload-release-action@v2
         with:
           tag: v${{ needs.update_version.outputs.version }}
