--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,6 +90,7 @@ jobs:
         if: matrix.platform == 'ubuntu-24.04'
         run: |
           sudo apt-get update
+          sudo apt remove needrestart #refer: https://github.com/actions/runner-images/issues/9937
           sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Rust (Stable)
