--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,13 @@ tauri-plugin-process = "2.0.0-beta.5"
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-updater = "2.0.0-beta.6"
 
+[dependencies.openssl]
+version = "=0.10.64"
+features = ["vendored"]
+[dependencies.openssl-sys]
+version = "=0.9.102"
+features = ["vendored"]
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
