--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "dev": "cd frontend/ && yarn dev"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2.0.0-beta.20"
+        "@tauri-apps/cli": "^2.0.0-beta"
     },
     "dependencies": {
-        "@tauri-apps/plugin-process": "^2.0.0-beta.4",
-        "@tauri-apps/plugin-shell": "^2.0.0-beta.5",
-        "tauri-plugin-window-state-api": "https://github.com/tauri-apps/tauri-plugin-window-state#v1"
+        "@tauri-apps/plugin-process": "^2.0.0-beta",
+        "@tauri-apps/plugin-shell": "^2.0.0-beta",
+        "tauri-plugin-window-state-api": "https://github.com/tauri-apps/tauri-plugin-window-state#v2"
     }
 }
