--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,7 +91,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt remove needrestart #refer: https://github.com/actions/runner-images/issues/9937
-          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libssl3 libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Rust (Stable)
         run:
@@ -224,3 +224,18 @@ jobs:
         with:
           tag: v${{ needs.update_version.outputs.version }}
           file: src-tauri/bin/squeezelite-x86_64-unknown-linux-gnu
+
+      - name: Upload deb build
+        if: matrix.platform == 'ubuntu-24.04'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          tag: v${{ needs.update_version.outputs.version }}
+          file: src-tauri/target/release/bundle/deb/music-assistant-companion_0.0.54_amd64.deb
+
+      - name: Upload appimage build
+        if: matrix.platform == 'ubuntu-24.04'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          tag: v${{ needs.update_version.outputs.version }}
+          file: src-tauri/target/release/bundle/appimage/music-assistant-companion_0.0.54_amd64.AppImage
+
