--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ on:
         description: 'Try to pull latest changes from frontend repository (companion branch)'
         required: false
         type: boolean
-        default: false
+        default: true
 
 jobs:
   update_version:
