--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,23 +10,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-beta.19", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = [ "devtools", "tray-icon"] }
-tauri-plugin-single-instance = "2.0.0-beta"
-tauri-plugin-window-state = "2.0.0-beta"
+tauri = { version = "2.0.0-beta.24", features = [ "devtools", "tray-icon"] }
+tauri-plugin-single-instance = "2.0.0-beta.11"
+tauri-plugin-window-state = "2.0.0-beta.11"
 discord-rich-presence = "0.2.4"
 tungstenite = {version = "0.23.0", features = ["native-tls"] }
 url = "2.5.2"
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
-gethostname = "0.4.3"
-tauri-plugin-shell = "2.0.0-beta"
-tauri-plugin-process = "2.0.0-beta"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+gethostname = "0.5.0"
+tauri-plugin-shell = "2.0.0-beta.9"
+tauri-plugin-process = "2.0.0-beta.8"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-tauri-plugin-updater = "2.0.0-beta"
+tauri-plugin-updater = "2.0.0-beta.10"
 
 [dependencies.openssl]
 version = "=0.10.64"
