--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,4 +42,4 @@ custom-protocol = ["tauri/custom-protocol"]
 
 [lib]
 name = "app_lib"
-crate-type = ["staticlib", "cdylib", "rlib", "lib"]
+crate-type = ["staticlib", "cdylib", "rlib"]
