--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "dev": "cd frontend/ && yarn dev"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2.0.0-beta.22"
+        "@tauri-apps/cli": "^2.0.0-rc.3"
     },
     "dependencies": {
-        "@tauri-apps/plugin-process": "^2.0.0-beta.7",
-        "@tauri-apps/plugin-shell": "^2.0.0-beta.8",
+        "@tauri-apps/plugin-process": "^2.0.0-rc.0",
+        "@tauri-apps/plugin-shell": "^2.0.0-rc.0",
         "tauri-plugin-window-state-api": "https://github.com/tauri-apps/tauri-plugin-window-state#v2"
     }
 }
