--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,29 +10,29 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta.19", features = [] }
+tauri-build = { version = "2.0.0-rc.2", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta.24", features = [ "devtools", "tray-icon"] }
-tauri-plugin-single-instance = "2.0.0-beta.11"
-tauri-plugin-window-state = "2.0.0-beta.11"
+tauri = { version = "2.0.0-rc.2", features = [ "devtools", "tray-icon"] }
+tauri-plugin-single-instance = "2.0.0-rc.0"
+tauri-plugin-window-state = "2.0.0-rc.0"
 discord-rich-presence = "0.2.4"
 tungstenite = {version = "0.23.0", features = ["native-tls"] }
 url = "2.5.2"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+serde = { version = "1.0.207", features = ["derive"] }
+serde_json = "1.0.124"
 gethostname = "0.5.0"
-tauri-plugin-shell = "2.0.0-beta.9"
-tauri-plugin-process = "2.0.0-beta.8"
+tauri-plugin-shell = "2.0.0-rc.0"
+tauri-plugin-process = "2.0.0-rc.0"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-tauri-plugin-updater = "2.0.0-beta.10"
+tauri-plugin-updater = "2.0.0-rc.0"
 
 [dependencies.openssl]
-version = "=0.10.64"
+version = "=0.10.66"
 features = ["vendored"]
 [dependencies.openssl-sys]
-version = "=0.9.102"
+version = "=0.9.103"
 features = ["vendored"]
 
 [features]
