--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.124"
 gethostname = "0.5.0"
 tauri-plugin-shell = "2.0.0-rc.0"
 tauri-plugin-process = "2.0.0-rc.0"
+time = "0.3.36"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-updater = "2.0.0-rc.0"
