--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -99,6 +99,7 @@ jobs:
             libssl-dev \
             libgtk-3-dev \
             libayatana-appindicator3-dev \
+            libsoup-3.0-dev \
             librsvg2-dev;
           sudo apt install -y \
             libwebkit2gtk-4.0-37=2.36.0-2ubuntu1 \
@@ -107,6 +108,7 @@ jobs:
             libjavascriptcoregtk-4.0-dev=2.36.0-2ubuntu1 \
             gir1.2-javascriptcoregtk-4.0=2.36.0-2ubuntu1 \
             gir1.2-webkit2-4.0=2.36.0-2ubuntu1;
+          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
       - name: Install Rust (Stable)
         run:
           curl https://sh.rustup.rs -sSf | sh -s -- -y
