--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,24 +90,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libxdo-dev libxcb-xfixes0-dev libxcb-shape0-dev patchelf
-          sudo apt install -y \
-            build-essential \
-            curl \
-            wget \
-            file \
-            libssl-dev \
-            libgtk-3-dev \
-            libayatana-appindicator3-dev \
-            libsoup-3.0-dev \
-            librsvg2-dev;
-          sudo apt install -y \
-            libwebkit2gtk-4.0-37=2.36.0-2ubuntu1 \
-            libwebkit2gtk-4.0-dev=2.36.0-2ubuntu1 \
-            libjavascriptcoregtk-4.0-18=2.36.0-2ubuntu1 \
-            libjavascriptcoregtk-4.0-dev=2.36.0-2ubuntu1 \
-            gir1.2-javascriptcoregtk-4.0=2.36.0-2ubuntu1 \
-            gir1.2-webkit2-4.0=2.36.0-2ubuntu1;
+          sudo apt-get install -y libwebkit2gtk-4.1-0=2.36.0-2ubuntu1 libwebkit2gtk-4.1-dev=2.36.0-2ubuntu1 libjavascriptcoregtk-4.1-dev=2.36.0-2ubuntu1 libjavascriptcoregtk-4.1-0=2.36.0-2ubuntu1 gir1.2-webkit2-4.1=2.36.0-2ubuntu1 gir1.2-javascriptcoregtk-4.1=2.36.0-2ubuntu1 build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev libsoup2.4-dev libxcb-xfixes0-dev libxcb-shape0-dev patchelf
       - name: Install Rust (Stable)
         run:
           curl https://sh.rustup.rs -sSf | sh -s -- -y
