--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,11 +86,29 @@ jobs:
         run: |
           git pull
 
-      - name: Install dependencies (Linux)
-        if: matrix.platform == 'ubuntu-22.04'
+      - name: Install linux dependencies
+        shell: bash
+        if: runner.os == 'Linux'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-0=2.36.0-2ubuntu1 libwebkit2gtk-4.1-dev=2.36.0-2ubuntu1 libjavascriptcoregtk-4.1-dev=2.36.0-2ubuntu1 libjavascriptcoregtk-4.1-0=2.36.0-2ubuntu1 gir1.2-webkit2-4.1=2.36.0-2ubuntu1 gir1.2-javascriptcoregtk-4.1=2.36.0-2ubuntu1 build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev libsoup2.4-dev libxcb-xfixes0-dev libxcb-shape0-dev patchelf
+          sudo apt update;
+          sudo apt install -y \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
+            libgtk-3-dev \
+            libappindicator3-dev \
+            librsvg2-dev;
+
+          sudo apt install -y \
+            libwebkit2gtk-4.1-0=2.44.0-2 \
+            libwebkit2gtk-4.1-dev=2.44.0-2 \
+            libjavascriptcoregtk-4.1-0=2.44.0-2 \
+            libjavascriptcoregtk-4.1-dev=2.44.0-2 \
+            gir1.2-javascriptcoregtk-4.1=2.44.0-2 \
+            gir1.2-webkit2-4.1=2.44.0-2;
+      
       - name: Install Rust (Stable)
         run:
           curl https://sh.rustup.rs -sSf | sh -s -- -y
