--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -99,6 +99,10 @@ jobs:
             libssl-dev \
             libgtk-3-dev \
             libappindicator3-dev \
+            libxcb-xfixes0-dev \
+            libxcb-shape0-dev \
+            patchelf \
+            libxdo-dev \
             librsvg2-dev;
 
           sudo apt install -y \
